syntax = "proto3";

import "google/protobuf/empty.proto";

service ExampleService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Subscribe (google.protobuf.Empty) returns (stream SubscribeResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
}


message SubscribeResponse {
  string message = 1;
}